update: 增加gradle jvm参数